Review QMCI tutorial

--- a/documentation/source/general/tutorial/QMCItutorial.ipynb
+++ b/documentation/source/general/tutorial/QMCItutorial.ipynb
@@ -41,11 +41,11 @@
    "source": [
     "## Theory & Implementation in Qrisp\n",
     "\n",
-    "The implementation in Qrisp requires the implementation of the function acting on a [QuantumFloat](/reference/Quantum%20Types/QuantumFloat.html). We will see how this can be done later in the example.\n",
+    "The implementation in Qrisp requires the implementation of the function acting on a [QuantumFloat](../../reference/Quantum%20Types/QuantumFloat.rst). We will see how this can be done later in the example.\n",
     "\n",
-    "There is multiple ways to implement Monte Carlo integration in a quantum fashion. In this tutorial, we use an approach based on quantum counting. The idea is to discretize not only the $x$-axis but the $y$-axis as well. We use two [QuantumFloats](/reference/Quantum%20Types/QuantumFloat.html) for this. \n",
-    "One [QuantumFloat](/reference/Quantum%20Types/QuantumFloat.html) will hold the discretized values of the $x$-axis, while the other one will hold the discretized values of the $y$-axis. \n",
-    "We can then simply count, in quantum fashion, the number of points under the function curve, and divide it by the number of total points. This is enabled by a [QuantumBool](/reference/Quantum%20Types/QuantumBool.html) which for each state $\\ket{x}\\ket{y}$ indicates whether the condition $y<f(x)$ is satisfied.\n",
+    "There is multiple ways to implement Monte Carlo integration in a quantum fashion. In this tutorial, we use an approach based on quantum counting. The idea is to discretize not only the $x$-axis but the $y$-axis as well. We use two QuantumFloats for this. \n",
+    "One QuantumFloat will hold the discretized values of the $x$-axis, while the other one will hold the discretized values of the $y$-axis. \n",
+    "We can then simply count, in quantum fashion, the number of points under the function curve, and divide it by the number of total points. This is enabled by a [QuantumBool](../../reference/Quantum%20Types/QuantumBool.rst) which for each state $\\ket{x}\\ket{y}$ indicates whether the condition $y<f(x)$ is satisfied.\n",
     "\n",
     "Don't give up just yet, the mathematical description will bring you more clarity!\n",
     "\n",
@@ -58,7 +58,7 @@
     "\n",
     "$$\\frac{1}{N}\\sum\\limits_{i=0}^{N-1}f(i/N)$$\n",
     "\n",
-    "As a first step, we prepare a uniform superposition state in the [QuantumFloats](/reference/Quantum%20Types/QuantumFloat.html) (or any other distribution for the variable discretizing the $x$-axis):\n",
+    "As a first step, we prepare a uniform superposition state in the QuantumFloats (or any other distribution for the variable discretizing the $x$-axis):\n",
     "\n",
     "$$\\ket{0} \\ket{0} \\rightarrow \\frac{1}{\\sqrt{M \\cdot N}} \\sum^{N-1}_{i=0} \\sum^{M-1}_{j=0} \\ket{x_i} \\ket{y_j}$$\n",
     "\n",
@@ -70,7 +70,7 @@
     "\n",
     "where $\\mathbb{1}_{y_j < f(x_i)}$ is $1$ if $y_j < f(x_i)$ and $0$ otherwise, and similarly for $\\mathbb{1}_{y_j\\geq f(x_i)}$.\n",
     "\n",
-    "We now arrive at the central step of this algorithm, which is [Quantum Amplitude Estimation](/reference/Primitives/QAE.html). We use it to find the probability of measuring a good state $\\ket{x_i}\\ket{y_j}\\ket{\\text{True}}$, i.e.\n",
+    "We now arrive at the central step of this algorithm, which is [Quantum Amplitude Estimation](../../reference/Primitives/QAE.rst). We use it to find the probability of measuring a good state $\\ket{x_i}\\ket{y_j}\\ket{\\text{True}}$, i.e.\n",
     "\n",
     "$$p(\\{ (x_i,y_j) \\mid y_j < f(x_i) \\}) = \\frac{1}{N} \\sum^{N-1}_{i=0} \\frac{1}{M} \\sum^{M-1}_{j=0}  \\mathbb{1}_{y_j < f(x_i)} \\approx \\frac{1}{N} \\sum^{N-1}_{x=0} \\frac{f(x_i)}{C}$$\n",
     "\n",
@@ -85,7 +85,7 @@
    "source": [
     "## Iterative Quantum Amplitude Estimation\n",
     "\n",
-    "In Qrisp we have the option of using a resource efficient amplitude estimation algorithm, namely [Accelerated Quantum Amplitude Estimation, see Algorithm 1](https://arxiv.org/pdf/2407.16795), which iteratively applies [amplitude amplification](/reference/Primitives/QAE.html) to find an estimation for the probability of measuring a good state.\n",
+    "In Qrisp we have the option of using a resource efficient amplitude estimation algorithm, namely [Accelerated Quantum Amplitude Estimation, see Algorithm 1](https://arxiv.org/pdf/2407.16795), which iteratively applies [amplitude amplification](../../reference/Primitives/amplitude_amplification.rst) to find an estimation for the probability of measuring a good state.\n",
     "The goal of the algorithm is as follows: \n",
     "\n",
     "We start with a unitary operator $\\mathcal{A}$, which acts on the input quantum variables as\n",
@@ -100,7 +100,7 @@
     "\n",
     "$$\\mathbb{P}\\{|\\hat{a} - a|\\leq\\epsilon\\}\\geq 1-\\alpha$$\n",
     "\n",
-    "A documentation explaining how to use the Qrisp implementation of this algorithm can found in the [IQAE](/reference/Primitives/IQAE.html) reference."
+    "A documentation explaining how to use the Qrisp implementation of this algorithm can found in the [IQAE](../../reference/Primitives/IQAE.rst) reference."
    ]
   },
   {
@@ -115,15 +115,15 @@
     "\n",
     "$$\\int_0^1x^2\\mathrm dx$$\n",
     "\n",
-    "A general implementation for integration of multidimensional functions w.r.t. arbitrary probability distributions is provided by the [QMCI](/reference/Primitives/QMCI.html) method.\n",
+    "A general implementation for integration of multidimensional functions w.r.t. arbitrary probability distributions is provided by the [QMCI](../../reference/Algorithms/QMCI.rst) method.\n",
     "\n",
     "First, we define the `function` that we want to integrate, and a function for preparing the uniform distribution. \n",
     "Additionally, we define the variables representing the $x$-axis (`qf_x`) and $y$-axis (`qf_y`). \n",
-    "Thereby, the [QuantumFloat](/reference/Quantum%20Types/QuantumFloat.html) representing the $y$-axis must be chosen appropriately with respect to the values that `function(qf_x)` assumes.\n",
+    "Thereby, the QuantumFloat representing the $y$-axis must be chosen appropriately with respect to the values that `function(qf_x)` assumes.\n",
     "\n",
     "In this example, we evaluate the function $f(x)$ at $2^3=8$ sampling points as specified by `QuantumFloat(3,-3)`. \n",
     "The resulting values that the function assumes are represented by `QuantumFloat(6,-6)`.\n",
-    "We also define a [QuantumBool](/reference/Quantum%20Types/QuantumBool.html), which will indicate the \"points under the curve\"."
+    "We also define a `QuantumBool`, which will indicate the \"points under the curve\"."
    ]
   },
   {
@@ -177,14 +177,14 @@
    "id": "aa2855f5",
    "metadata": {},
    "source": [
-    "It receives the [`@auto_uncompute`](/reference/Code%20Generation/Uncomputation.html) decorator ensuring that all intermediate variables are properly uncomputed. \n",
+    "It receives the `auto_uncompute` decorator ensuring that all intermediate variables are properly uncomputed. \n",
     "We apply the chosen distribution to `qf_x`, which represents the $x$-axis. \n",
     "As explained earlier, we also discretize the $y$-axis by applying an `h` gate to `qf_y`.\n",
     "\n",
-    "Within a [ConditionEnvironment](/reference/Core/Environment%20Stack.html#conditionenvironment), we then evaluate in superposition which states in `qf_y` are smaller than the chosen function evaluated on `qf_x`.\n",
-    "We store the result of the comparison in the [QuantumBool](/reference/Quantum%20Types/QuantumBool.html) `qbl`, by applying an `x` gate on the previously mentioned QuantumBool if said condition is satisfied.\n",
+    "Within a [ConditionEnvironment](../../reference/Quantum%20Environments/ConditionEnvironment.rst), we then evaluate in superposition which states in `qf_y` are smaller than the chosen function evaluated on `qf_x`.\n",
+    "We store the result of the comparison in the QuantumBool `qbl`, by applying an `x` gate on the previously mentioned QuantumBool if said condition is satisfied.\n",
     "\n",
-    "With everything in place, we can now execute the [Iterative QAE algorithm](/reference/Primitives/IQAE.html), with a chosen error tolerance `eps` and a confidence level `alpha`."
+    "With everything in place, we can now execute the [IQAE](../../reference/Primitives/IQAE.rst) method, with a chosen error tolerance `eps` and a confidence level `alpha`."
    ]
   },
   {
