--- a/documentation/source/general/tutorial/QMCItutorial.ipynb
+++ b/documentation/source/general/tutorial/QMCItutorial.ipynb
@@ -251,7 +251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "qrisp",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
