Review Constrained Mixers tutorial

--- a/documentation/source/general/tutorial/QAOAtutorial/ConstrainedMixers.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/ConstrainedMixers.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "An interesting approach to overcome these problems is the introduction of constrained mixers. These mixers don't mix the states between the allowed and forbidden subspace. In other words: If you insert an allowed state, your are guaranteed to also receive an allowed state after the mixer has been applied. Since QAOA is an alternating sequence of cost function applications (which don't mix the computational basis at all) and mixers, the final state will also be an allowed state (provided that the initial state was allowed).\n",
     "\n",
-    "One of the first example was the [XY mixer](https://dl.acm.org/doi/pdf/10.1145/3149526.3149530), that you might already be familiar with from [MkCSQAOA](/reference/applications/QAOAApplications/MaxKCutWithoutPreCondition.html). This mixer could be seen as some kind of \"continuous swap\" operation. That is: In any given multi qubit state, it preserves the number of ones. This is especcially usefull in the context of one-hot encoded [QuantumVariables](/reference/general/QuantumVariables.html) because this encoding relies on the fact that each state only contains a single one.\n",
+    "One of the first example was the [XY mixer](https://dl.acm.org/doi/pdf/10.1145/3149526.3149530), that you might already be familiar with from the Max-$\\kappa$-Colorable Subgraph QAOA Implementation. This mixer could be seen as some kind of \"continuous swap\" operation. That is: In any given multi qubit state, it preserves the number of ones. This is especcially usefull in the context of one-hot encoded [QuantumVariables](../../../reference/Core/QuantumVariable.rst) because this encoding relies on the fact that each state only contains a single one.\n",
     "\n",
     "A more flexible framework has been presented in [this paper](https://arxiv.org/abs/2203.06095). The approach here is to classically construct a matrix $H$, which preserves the required subspace and subsequently use Trotterization to simulate evolution under $H$ on the quantum computer. While this approach in principle allows arbitrary constraints, it also has a few disadvantages:\n",
     "\n",
@@ -70,13 +70,13 @@
    "source": [
     "## Mono-Channel Mixers\n",
     "\n",
-    "Our mixer architecture can be best understood by starting with a single channel. You will see what we mean by channel once you reach the multi-channel section. Mono-channel mixers are very flexible and provide an all-to-all mixing but can be more resource demanding than multi-channel mixers. We will give a short theoretical introduction, which is followed by an implementation of one such mixer, which will be plugged into the MaxCut implementation of the [previous tutorial](/reference/general/tutorial/QAOAtutorial/MaxCut.html).\n",
+    "Our mixer architecture can be best understood by starting with a single channel. You will see what we mean by channel once you reach the multi-channel section. Mono-channel mixers are very flexible and provide an all-to-all mixing but can be more resource demanding than multi-channel mixers. We will give a short theoretical introduction, which is followed by an implementation of one such mixer, which will be plugged into the MaxCut QAOA Implementation.\n",
     "\n",
     "Let \n",
     "\n",
     "$$f: \\mathbb{F}_2^n \\rightarrow \\mathbb{F}_2, x \\rightarrow f(x)$$\n",
     "\n",
-    "represent an arbitrary constraint function. We say $x \\in \\mathbb{F}_2^n $ is allowed if $f(x) = 1$ and $x$ is forbidden otherwise.\n",
+    "represent an arbitrary constraint function. We say $x \\in \\mathbb{F}_2^n$ is allowed if $f(x) = 1$ and $x$ is forbidden otherwise.\n",
     "\n",
     "We define:\n",
     "\n",
@@ -101,7 +101,7 @@
     "\n",
     "* $U_{\\text{mono}}(\\beta) \\ket{x} = \\ket{x}$ if $f(x) = 0$ (follows directly from $\\bra{\\psi_f}\\ket{f} = 0$). This property makes sure that forbidden states are mapped onto themselves, guaranteeing that the mixer only mixes among the allowed states.\n",
     "* $U_{\\text{mono}}(0) = 1$. This property ensures that there is indeed no mixing happening at $\\beta = 0$.\n",
-    "* $|\\bra{x} U_{\\text{mono}}(\\beta) \\ket{x}| \\neq 1$ for $f(x) = 1, \\beta \\in (0, 2\\pi)$. This property shows that there is indeed **some** mixing happening for allowed states at $\\beta \\neq  0 $."
+    "* $|\\bra{x} U_{\\text{mono}}(\\beta) \\ket{x}| \\neq 1$ for $f(x) = 1, \\beta \\in (0, 2\\pi)$. This property shows that there is indeed **some** mixing happening for allowed states at $\\beta \\neq 0$."
    ]
   },
   {
@@ -152,7 +152,7 @@
     "$$f: \\mathbb{F}_2^n \\rightarrow \\mathbb{F}_2, x \\rightarrow (x_{n-1} \\neq x_0)$$\n",
     "\n",
     "\n",
-    "The next step is to write the state preparation function. For this we use the [exact](/reference/algorithms/grovers_algorithm.html) feature of Grover's algorithm. This performs a Grover-search of the allowed states and thus prepares a state where only the allowed states are present."
+    "The next step is to write the state preparation function. For this we use the ``exact`` feature of [Grover's algorithm](../../../reference/Algorithms/Grover.rst). This performs a Grover-search of the allowed states and thus prepares a state where only the allowed states are present."
    ]
   },
   {
@@ -266,7 +266,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "#Checks the action of the mixer on a forbidden state (first and last qubit are both 1)\n",
+    "# Checks the action of the mixer on a forbidden state (first and last qubit are both 1)\n",
     "qv = QuantumVariable(3)\n",
     "qv[:] = \"111\"\n",
     "constrained_mixer(qv, np.pi)\n",
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "#Checks the action of the mixer with beta = 0 (expected to be the identity)\n",
+    "# Checks the action of the mixer with beta = 0 (expected to be the identity)\n",
     "qv = QuantumVariable(3)\n",
     "qv[:] = \"110\"\n",
     "constrained_mixer(qv, 0)\n",
@@ -310,8 +310,8 @@
     }
    ],
    "source": [
-    "#Checks the action of the mixer on an allowed state \n",
-    "#(expected to mix only among the states where first and last qubit disagree)\n",
+    "# Checks the action of the mixer on an allowed state \n",
+    "# (expected to mix only among the states where first and last qubit disagree)\n",
     "qv = QuantumVariable(3)\n",
     "qv[:] = \"011\"\n",
     "constrained_mixer(qv, np.pi)\n",
@@ -366,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'00011': 0.4112, '11100': 0.135, '01111': 0.0492, '00111': 0.0484, '01011': 0.044, '01101': 0.0344, '10010': 0.0338, '01001': 0.0334, '10110': 0.032, '00001': 0.0306, '11010': 0.0302, '11110': 0.0302, '00101': 0.0282, '10000': 0.0222, '11000': 0.019, '10100': 0.0182}\n"
+      "{'00011': 0.3572, '11100': 0.0864, '01111': 0.0656, '01011': 0.0522, '10010': 0.0484, '00111': 0.0484, '10110': 0.047, '11110': 0.045, '11010': 0.0448, '10000': 0.043, '11000': 0.0392, '10100': 0.0376, '00101': 0.0232, '01001': 0.0216, '01101': 0.0212, '00001': 0.0192}\n"
      ]
     }
    ],
@@ -389,7 +389,7 @@
    "id": "4de53af8",
    "metadata": {},
    "source": [
-    "From the [MaxCutQAOA](/reference/general/tutorial/QAOAtutorial/MaxCut.html) tutorial, we know that the correct solution to this instance is either ``11100`` or ``00011``. We see that not only do the correct solutions have the top probability, there are also only solutions which satisfy our constrain (first and last qubit disagreeing)."
+    "From the MaxCut QAOA tutorial, we know that the correct solution to this instance is either ``11100`` or ``00011``. We see that not only do the correct solutions have the top probability, there are also only solutions which satisfy our constraint (first and last qubit disagreeing)."
    ]
   },
   {
@@ -443,18 +443,18 @@
    "source": [
     "**Implementation**\n",
     "\n",
-    "To demonstrate how a multi-channel mixer works, we introduce a new [QuantumFloat](/reference/general/QuantumVariables.html) called ``channel``, indicating which channel is used for the mixing. \n",
+    "To demonstrate how a multi-channel mixer works, we introduce a new [QuantumFloat](../../../reference/Quantum%20Types/QuantumFloat.rst) called ``channel``, indicating which channel is used for the mixing. \n",
     "The previously mentioned states $\\ket{x_i}$ are therefore states of the form\n",
     "\n",
     "$$\\ket{x_i} = \\ket{0}\\ket{i}$$\n",
     "    \n",
-    "Where the second ket is the ``channel`` [QuantumFloat](/reference/general/QuantumVariables.html). The first ket is a [QuantumVariable](/reference/general/QuantumVariables.html) we will call ``mixing_var``. Our mixer will therefore mix states within ``mixing_var`` for a given index $i$ but not across $i$ indices. What kind of mixing is performed on ``mixing_var``? In principle, it can be an arbitrary mono-channel mixer. We will thus recycle our previously implemented mixer.\n",
+    "Where the second ket is the ``channel`` QuantumFloat. The first ket is a QuantumVariable we will call ``mixing_var``. Our mixer will therefore mix states within ``mixing_var`` for a given index $i$ but not across $i$ indices. What kind of mixing is performed on ``mixing_var``? In principle, it can be an arbitrary mono-channel mixer. We will thus recycle our previously implemented mixer.\n",
     "\n",
     "Note that this construction indeed satisfies the requirement that $V_f$ can be expressed as a direct sum. This is because the multi-channel state preparation is just the mono-channel state preparation acting on the tensor product space. Thus:\n",
     "\n",
     "$$V_f = U_f \\otimes 1_{m \\times m} = \\bigoplus_{i = 0}^{m-1} U_f$$\n",
     "\n",
-    "To begin with the implementation, we first use the [as_hamiltonian](/reference/quantum_info/as_hamiltonian.html) decorator to implement the hamiltonian evolution:\n",
+    "To begin with the implementation, we first use the [as_hamiltonian](../../../reference/generated/qrisp.as_hamiltonian.rst) decorator to implement the hamiltonian evolution:\n",
     "\n",
     "$$\\text{exp}\\left( i \\sum_{i = 0}^{m-1} \\beta_i \\ket{x_i}\\bra{x_i} \\right)$$\n",
     "\n",
@@ -693,7 +693,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "qrisp",
    "language": "python",
    "name": "python3"
   },
@@ -707,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
