Review QUBO tutorial

--- a/documentation/source/general/tutorial/QAOAtutorial/QUBO.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/QUBO.ipynb
@@ -60,12 +60,12 @@
    "id": "44d9b2a0",
    "metadata": {},
    "source": [
-    "Our implementation of solving QUBO problems using QAOA works for both the upper triangular, as well as symmetrized matrix conventions. As promised, we can now immediately solve the QUBO by calling the [solve_QUBO](/reference/qrisp.qaoa.problems.QUBO.solve_QUBO) method:"
+    "Our implementation of solving QUBO problems using QAOA works for both the upper triangular, as well as symmetrized matrix conventions. As promised, we can now immediately solve the QUBO by calling the [solve_QUBO](../../../reference/Algorithms/qaoa/implementations/QUBO.rst) method:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3c69fd4c",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "solve_QUBO(Q, depth = 1, shots=5000)[:5]"
+    "solve_QUBO(Q, depth=1, shots=5000)[:5]"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "source": [
     "That's it! You can try running this block of code on the website using the Thebe interactivity integration, or run it on your own Qrispy environment. \n",
     "We see that we obtain the 5 best solutions with the corresponding bitsring of the binary variables. \n",
-    "You can test the statements above, and convert the symmetrized matrix into the upper triangular one, and run [solve_QUBO](/reference/qrisp.qaoa.problems.QUBO.solve_QUBO) again.\n",
+    "You can test the statements above, and convert the symmetrized matrix into the upper triangular one, and run ``solve_QUBO`` again.\n",
     "\n",
     "We see, that we only needed to provide the matrix $Q$, specify the depth of the QAOA circuit that is running in the background, and the backend you want to run the algorithm on. Clean and qrispy!\n",
     "\n",
@@ -140,18 +140,18 @@
     "\n",
     "To find $H_C$ one can calculate\n",
     "\n",
-    "$$\\begin{align}\\begin{split}H_C\\&=\\sum_{i,j=1}^nQ_{ij}\\frac{\\mathbb{1}-Z_i}{2}\\frac{\\mathbb{1}-Z_j}{2}\\\\&=\\sum_{i,j=1}^n\\frac{Q_{ij}}{4}+\\sum_{i,j}^n\\frac{Q_{ij}}{4}Z_iZ_j\\\\&\\space\\space\\space\\space-\\sum_{i=1}^n\\bigg(\\sum_{j=1}^n\\frac{Q_{ij}}{4}\\bigg)Z_i-\\sum_{j=1}^n\\bigg(\\sum_{i=1}^n\\frac{Q_{ij}}{4}\\bigg)Z_j\\\\&\\space\\space\\space\\space\\end{split}\\end{align}$$\n",
+    "$$\\begin{align*}H_C=&\\sum_{i,j=1}^nQ_{ij}\\frac{\\mathbb{1}-Z_i}{2}\\frac{\\mathbb{1}-Z_j}{2}\\\\=&\\sum_{i,j=1}^n\\frac{Q_{ij}}{4}+\\sum_{i,j}^n\\frac{Q_{ij}}{4}Z_iZ_j\\\\&-\\sum_{i=1}^n\\bigg(\\sum_{j=1}^n\\frac{Q_{ij}}{4}\\bigg)Z_i-\\sum_{j=1}^n\\bigg(\\sum_{i=1}^n\\frac{Q_{ij}}{4}\\bigg)Z_j\\end{align*}$$\n",
     "\n",
     "Swapping the indices $i$ and $j$ in the last sum, and using the identity $Z_iZ_i=\\mathbb{1}$, we get \n",
     "\n",
-    "$$\\begin{align}\\begin{split}H_C&=\\frac{1}{4}\\sum_{i\\neq j}Q_{ij}Z_iZ_j-\\frac{1}{4}\\sum_{i=1}^n\\sum_{j=1}^n(Q_{ij}+Q_{ji})Z_i&+\\frac{1}{4}\\sum_{i,j=1}^nQ_{ij}+\\frac{1}{4}\\sum_{i=1}^nQ_{ii}\\end{split}\\end{align}$$\n",
+    "$$H_C=\\frac{1}{4}\\sum_{i\\neq j}Q_{ij}Z_iZ_j-\\frac{1}{4}\\sum_{i=1}^n\\sum_{j=1}^n(Q_{ij}+Q_{ji})Z_i+\\frac{1}{4}\\sum_{i,j=1}^nQ_{ij}+\\frac{1}{4}\\sum_{i=1}^nQ_{ii}$$\n",
     "\n",
     "Note that for each single $Z_i$ we sum the $i$-th row and the $i$-th column of the matrix $Q$. \n",
     "\n",
     "\n",
     "For the cost operator $U_C$, which we feed into ``QAOAProblem``, we get\n",
     "\n",
-    "$$\\begin{align}\\begin{split}U_C=e^{-i\\gamma H_C}=\\&\\prod_{i,j=1}^nR_{Z_iZ_j}\\Bigg(\\frac{\\gamma}{2}Q_{ij}\\Bigg)\\times\\prod_{i=1}^nR_{Z_i}\\Bigg(-\\frac{\\gamma}{2}\\bigg(\\sum_{j=1}^n(Q_{ij}+Q_{ji})\\bigg)\\Bigg)\\\\&\\times\\exp\\Bigg(-\\frac{i\\gamma}{4}\\sum_{i,j=1}^nQ_{ij}-\\frac{i\\gamma}{4}\\sum_{i=1}^nQ_{ii}\\Bigg)\\end{split}\\end{align}$$\n",
+    "$$\\begin{align*}U_C=e^{-i\\gamma H_C}=&\\prod_{i,j=1}^nR_{Z_iZ_j}\\Bigg(\\frac{\\gamma}{2}Q_{ij}\\Bigg)\\times\\prod_{i=1}^nR_{Z_i}\\Bigg(-\\frac{\\gamma}{2}\\bigg(\\sum_{j=1}^n(Q_{ij}+Q_{ji})\\bigg)\\Bigg)\\\\&\\times\\exp\\Bigg(-\\frac{i\\gamma}{4}\\sum_{i,j=1}^nQ_{ij}-\\frac{i\\gamma}{4}\\sum_{i=1}^nQ_{ii}\\Bigg)\\end{align*}$$\n",
     "\n",
     "Here, the last factor correspods to a global phase.\n",
     "\n",
@@ -186,7 +186,7 @@
    "id": "1ffddd18",
    "metadata": {},
    "source": [
-    "Like we did for [MaxCut](/reference/MaxCutQAOA) and [M$\\kappa$CS](/reference/MkCSQAOA) we also define the general QUBO objective function, the classical cost function, as well as construct the ``QUBOProblem`` blueprint bringing everything together."
+    "Like we did for MaxCut and M-$\\kappa$-CS we also define the general QUBO objective function, the classical cost function, as well as construct the ``QUBOProblem`` blueprint bringing everything together."
    ]
   },
   {
@@ -233,12 +233,12 @@
    "id": "6dfe058f",
    "metadata": {},
    "source": [
-    "That's it for the necessary ingredients you learned about in the [QAOA theory 101 section](/reference/QAOA101)! Let's solve the set partitioning problem from above using this newly acquired information, and combine with how we already ran the QAOA algorithm using the [run](/reference/qrisp.qaoa.QAOAProblem.run) method:\n",
+    "That's it for the necessary ingredients you learned about in the QAOA tutorial! Let's solve the set partitioning problem from above using this newly acquired information, and combine with how we already ran the QAOA algorithm using the ``run`` method:\n",
     "\n",
     "- define the QUBO matrix $Q$,\n",
-    "- define the quantum argument ``qarg`` as a [QuantumArray](/reference/QuantumArray) of [QuantumVariables](/reference/QuantumVariable),\n",
+    "- define the quantum argument ``qarg`` as a [QuantumArray](../../../reference/Core//QuantumArray.rst) of [QuantumVariables](../../../reference/Core/QuantumVariable.rst),\n",
     "- create the QUBO instance using ``QUBO_problem`` we defined above,\n",
-    "- run the algorithm using the [run](/reference/qrisp.qaoa.QAOAProblem.run) method, and last but not least,\n",
+    "- run the algorithm using the ``run`` method, and last but not least,\n",
     "- examine the QAOA solutions and perform for classical post processing: compute the cost functions, sort the solutions by their cost in ascending order, and print the solutions with their costs.\n",
     "\n",
     "\n",
@@ -246,10 +246,10 @@
     "\n",
     "> For small QUBO instance the number of ``shots`` typically exceeds the number of possible solutions.\n",
     "> In this case, even QAOA with ``depth=0``, i.e., sampling from a uniform superposition, may yield the optimal solution as the classical post-processing amounts to brute force search!\n",
-    "Performance of [solve_QUBO](/reference/qrisp.qaoa.problems.QUBO.solve_QUBO) for small instance may not be indicative of performance for large instances. \n",
+    "Performance of [solve_QUBO](../../../reference/Algorithms/qaoa/implementations/QUBO.rst) for small instance may not be indicative of performance for large instances. \n",
     "\n",
     "\n",
-    "These are exactly the pieces in the mosaic of code that [solve_QUBO](/reference/qrisp.qaoa.problems.QUBO.solve_QUBO) consists of and performs: "
+    "These are exactly the pieces in the mosaic of code that ``solve_QUBO`` consists of and performs: "
    ]
   },
   {
